fixed where chat pane was covering navbar

--- a/portfolio/src/App.css
+++ b/portfolio/src/App.css
@@ -352,6 +352,7 @@ div.tags {
 section#contact-me {
   overflow: hidden;
   position: relative;
+  z-index: 1;
 }
 
 #contact-me-background-rectangle {
@@ -419,7 +420,7 @@ form.card {
   background: #FFFFFF;
   box-shadow: 0px 4px 22px 2px rgba(0, 0, 0, 0.25);
   border-radius: 25px;
-  height: 60vh;
+  height: 420px;
   padding: 3%;
 }
 
